Fix multiple choice box spacing (on mobile)

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -708,9 +708,9 @@ textarea.application__form-text-area__size-large {
   cursor: pointer;
   display: flex;
   flex-flow: row nowrap;
-  height: 43px;
+  min-height: 43px;
   justify-content: flex-start;
-  padding: 0px 19px;
+  padding: 10px 19px;
   margin-bottom: 1px;
   font-size: 14px;
 }
